SearchResultTiles update accessibility when title changes

Bug: 876419
Change-Id: I5f0655343cf60056e854d8fcd6f5723b9b972cb3
Reviewed-on: https://chromium-review.googlesource.com/1185738
Commit-Queue: Katie Dektar <katie@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Reviewed-by: Dominic Mazzoni <dmazzoni@chromium.org>
Cr-Commit-Position: refs/heads/master@{#586963}
Former-commit-id: 3989df1ac2fbb669192e57d55ed8d9f93eb5968d